--- a/Echoes/Monsters.plist
+++ b/Echoes/Monsters.plist
@@ -939,7 +939,7 @@
 				<key>name</key>
 				<string>Drops</string>
 				<key>description</key>
-				<string>Gargoyle Helm, Key To Depths</string>
+				<string>Sorcerer's Cloak, Ghost Blade, Key To Depths</string>
 			</dict>
 		</array>
 	</dict>
