--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ DerivedData
 *.xcuserstate
 .idea
 
+BaseArtAssets/
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
