--- a/Dark Days/.swiftlint.yml
+++ b/Dark Days/.swiftlint.yml
@@ -3,12 +3,14 @@ disabled_rules: # rule identifiers to exclude from running
   - trailing_whitespace
   - line_length
   - variable_name
+  - cyclomatic_complexity
 
 opt_in_rules: # some rules are only opt-in
-  - missing_docs
   - force_unwrapping
   - force_https
-
+  - empty_count
+  - conditional_binding_cascade
+  
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
@@ -20,4 +22,3 @@ custom_rules:
     match_kinds: string
     message: "HTTPS should be favored over HTTP"
     severity: warning
-
