Adds swiftlint rule

--- a/Dark Days/.swiftlint.yml
+++ b/Dark Days/.swiftlint.yml
@@ -4,6 +4,7 @@ disabled_rules: # rule identifiers to exclude from running
   - line_length
   - variable_name
   - cyclomatic_complexity
+  - todo
 
 opt_in_rules: # some rules are only opt-in
   - force_unwrapping
