--- a/Dark Days/.swiftlint.yml
+++ b/Dark Days/.swiftlint.yml
@@ -16,6 +16,14 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
 
+type_body_length:
+  warning: 800
+  error: 1000
+  
+file_length: 
+  warning: 1000
+  error: 1200
+
 custom_rules:
   force_https:
     name: "Force HTTPS over HTTP"
