--- a/Dark Days/.swiftlint.yml
+++ b/Dark Days/.swiftlint.yml
@@ -5,7 +5,8 @@ disabled_rules: # rule identifiers to exclude from running
   - variable_name
   - cyclomatic_complexity
   - todo
-
+  - nesting
+  
 opt_in_rules: # some rules are only opt-in
   - force_unwrapping
   - force_https
@@ -17,12 +18,22 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Pods
 
 type_body_length:
-  warning: 800
-  error: 1000
+  - 700 #warning
+  - 1000 #error
+
+file_length:
+  - 1000 #warning
+  - 1200 #error
   
-file_length: 
-  warning: 1000
-  error: 1200
+function_body_length:
+  - 125 #warning
+  - 200 #error
+
+type_name:
+  min_length: 3 # only warning
+  max_length: # warning and error
+    warning: 50
+    error: 50
 
 custom_rules:
   force_https:
