Updated status effect stuff

--- a/Dark Days/Podfile
+++ b/Dark Days/Podfile
@@ -8,7 +8,8 @@ abstract_target 'defaults' do
     pod 'Decodable'
     pod 'HockeySDK'
     pod 'REMenu'
-
+    pod 'BEMCheckBox'
+    
     target 'Dark Days'
     target 'Dark DaysTests'
 
